# data-science-template

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.hud  README.md  env.py  local_test.py  pyproject.toml  remote_test.py  tasks.py
problem_templates/titanic_dataset_holdout/: Titanic-Dataset-test_x.csv  Titanic-Dataset-train.csv
problems/: Titanic-Dataset-test_y.csv  cabin_deck_analysis.py  class_distribution.py  correlation_analysis.py  predict_survival.py  survival_rate_by_gender.py
src/hud_controller/: app.py  env.py  grading_runner.py  spec.py
src/hud_controller/problems/: basic.py
tasks/age_stats/: golden.py  task.py
tasks/average_fare/: golden.py  task.py
tasks/cabin_deck/: task.py
tasks/class_distribution/: task.py
tasks/comprehensive/: golden.py  task.py
tasks/correlation/: task.py
tasks/count_survivors/: golden.py  task.py
tasks/embarked/: golden.py  task.py
tasks/family_survival/: golden.py  task.py
tasks/survival_by_gender/: task.py
tests/: conftest.py  test_scenarios.py
tools/: __init__.py
utils/: imagectl3.py
