[project]
name = "data-science-env"
version = "0.1.0"
description = "Data science evaluation environment for hud evaluations"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "hud-python[agents]>=0.5.17",
    "pytest>=8.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.11.2", "pre-commit>=3.5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["env.py"]
sources = ["."]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.hatch.metadata]
allow-direct-references = true
